...
    tools:context="org.sci.rhis.fwc.ClientIntroFragment"
    android:orientation="vertical"
    android:background="@drawable/fragmentborder"
    android:id = "@+id/clients_intro_parent_layout">

    <LinearLayout
        android:id="@+id/client_intro_layout"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
...
            android:layout_margin="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/rowHeading">

            <Button android:id="@+id/buttonEditNRC"
                android:text="EDIT"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:background="@drawable/button_style"
                android:onClick="editNRC"
                android:layout_alignParentTop="true"
...
