...
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:id="@+id/button_layout"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/button_layoutNRC"
            android:layout_width="0dp"
            android:layout_height="90dp"
...
        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button1"
                android:layout_width="100dip"
                android:layout_height="100dip"
                android:background="@drawable/mother"
            />

        </RelativeLayout>
...
