...
    <string name = "providerPassHint">"Union Health &#38; Family Planning Info Registration"</string>
    <string name = "ClientsIntroFragment">"Client&#39;s Detail"</string>
    <string name = "ProviderPlaceTittle">"Service Place"</string>
    <string name = "ProviderPlaceTip">"Select service location type of today:"</string>
    <string name = "PlaceFacility">Union Health &#38; Family Planning Center</string>
    <string name = "PlaceSatellite">Satellite Clinic</string>
    <string name = "title_confirmation">"Confirm"</string>
    <string name = "ClientsName">"Name "</string>
    <string name = "ClientsNameHint">"Client Name"</string>
    <string name = "ClientsAge">"Age "</string>
    <string name = "ClientsHusband">"Spouse "</string>
    <string name = "ClientsFather">"Father&#39;s Name"</string>
    <string name = "ClientsMother">"Mother&#39;s Name"</string>
...
    <string name="str_correct_fp_method_selection">"গ্রহীতার জন্য উপযুক্ত পদ্ধতি সমূহ সম্পর্কে নির্ভুল তথ্য প্রদান করে আলাপ-আলোচনার মাধ্যমে গ্রহীতার পছন্দসই ও সঠিক পদ্ধতি"</string>
    <string name="str_refer_properly">"গ্রহীতাকে উপযুক্ত স্বাস্থ্যকেন্দ্রে রেফার করুন ।"</string>

    <string name="temp_celsius"> &#176;সে</string>
    <string name="temp_celsius_entry"> &#176;সে এন্ট্রি</string>
    <string name="satellite_months_selection">Select months to submit</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_reset">Reset</string>


    <!-- Satellite Session Planning-->
    <string-array name="month">
...
